# mesh-n-bone

./: .gitignore  README.md  mkdocs.yml  pixi.toml  pyproject.toml  runnables.yaml
.github/workflows/: docs.yml  publish.yml  test.yml
cgal_skeletonize_mesh/: CMakeLists.txt  skeletonize_mesh.cpp
docs/: cli.md  index.md
docs/api/: analyze.md  meshify.md  multires.md  skeletonize.md  util.md
examples/: README.md  create_example_volume.py  example.ipynb
examples/meshify-config/: dask-config.yaml  run-config.yaml
fileglancer/: README.md  dask-config.yaml  run_meshify.py  runnables.yaml
lsf-config/: dask-config.yaml
multiresolution_mesh_creator/src/: create_multiresolution_meshes.py
multiresolution_mesh_creator/util/: io_util.py
src/mesh_n_bone/: __init__.py  __main__.py  cli.py  config.py  serve.py
src/mesh_n_bone/analyze/: analyze.py
src/mesh_n_bone/meshify/: downsample.py  fixed_edge.py  meshify.py
src/mesh_n_bone/multires/: decimation.py  decomposition.py  multires.py
src/mesh_n_bone/skeletonize/: skeleton.py  skeletonize.py
src/mesh_n_bone/util/: cellmap_array.py  dask_util.py  image_data_interface.py  logging.py  mesh_io.py  neuroglancer.py  zarr_io.py
tests/: conftest.py  test_analyze.py  test_cli.py  test_integration_analysis.py  test_integration_coordinates.py  test_integration_downsample.py  test_integration_fixed_edge.py  test_integration_meshify.py  test_integration_multires.py  test_integration_multiscale.py  test_integration_neuroglancer.py  test_integration_skeleton.py  test_integration_watertight.py  test_mesh_io.py  test_meshify.py  test_multires.py  test_roi.py  test_skeletonize.py  test_zarr_io.py
