[project]
name = "mesh-n-bone"
version = "0.1.0"
description = "Unified tool for mesh generation, multiresolution mesh creation, skeletonization, and analysis."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "David Ackerman", email = "ackermand@janelia.hhmi.org" },
]
license-files = ["LICENSE"]

dependencies = [
  # Core
  "numpy",
  "trimesh>=4.6.8",
  "dask",
  "distributed",
  "dask-jobqueue>=0.9.0",
  "bokeh>=3.1.0",
  "pyyaml",
  "pandas",

  # Mesh processing
  "dracopy>=1.5.0",
  "pyfqmr>=0.3.0",
  "pymeshlab",

  # Mesh generation (zmesh, cloud-volume)
  "cloud-volume",
  "zmesh",

  # Volumetric data
  "funlib.geometry",
  "funlib.persistence>=0.4,<0.6",
  "numba",
  "zarr<3",
  "numcodecs",

  # Skeletonization
  "neuroglancer",
  "fastremap",
  "pybind11-rdp",
  "networkx",

  # Analysis
  "scipy",
  "pyarrow",

  # Geometry
  "shapely",
]

[project.urls]
Repository = "https://github.com/janelia-cellmap/mesh-n-bone"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
mesh-n-bone = "mesh_n_bone.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mesh_n_bone*"]
