[project]
name = "mesh-n-bone"
version = "0.1.4"
description = "Unified tool for mesh generation, multiresolution mesh creation, skeletonization, and analysis."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "David Ackerman", email = "ackermand@janelia.hhmi.org" },
]
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["mesh", "neuroglancer", "skeletonization", "multiresolution", "segmentation", "neuroscience"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Topic :: Scientific/Engineering :: Image Processing",
]

dependencies = [
  # Core
  "numpy",
  "trimesh>=4.6.8",
  "dask[distributed]==2025.5.1",
  "dask-jobqueue==0.9.0",
  "bokeh>=3.1.0",
  "pyyaml",
  "pandas",

  # Mesh processing
  "dracopy>=1.5.0",
  "pyfqmr>=0.3.0",
  "pymeshlab",

  # Mesh generation (zmesh, cloud-volume)
  "cloud-volume",
  "zmesh",

  # Volumetric data
  "funlib.geometry",
  "tensorstore",
  "numba",

  # Skeletonization
  "neuroglancer",
  "fastremap",
  "pybind11-rdp",
  "networkx",

  # Analysis
  "scipy",
  "pyarrow",

  # Geometry
  "shapely",
]

[project.optional-dependencies]
docs = [
  "mkdocs-material",
  "mkdocstrings[python]",
]
test = [
  "pytest",
  "zarr>=3.0.8",
]

[project.urls]
Repository = "https://github.com/janelia-cellmap/mesh-n-bone"
Documentation = "https://janelia-cellmap.github.io/mesh-n-bone/"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project.scripts]
mesh-n-bone = "mesh_n_bone.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["mesh_n_bone*"]
